feat: add document versioning and calendar permissions